--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
@@ -19,6 +20,7 @@
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "nodemon": "^3.1.7",
     "prisma": "^5.22.0"
   }
 }
